KUBE/Eks/Ingress-Applications/app4-react-rust-postgres/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app4-frontend-service
  namespace: app4
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
